@@ -294,7 +294,6 @@ qahelp={
 	"ebuild.majorsyn":"This ebuild has a major syntax error that may cause the ebuild to fail partially or fully",
 	"ebuild.minorsyn":"This ebuild has a minor syntax error that contravenes gentoo coding style",
 	"ebuild.badheader":"This ebuild has a malformed header",
-	"ebuild.autotools":"Ebuild calls autotools directly instead of using autotools.eclass",
 	"metadata.missing":"Missing metadata.xml files",
 	"metadata.bad":"Bad metadata.xml files",
 	"virtual.versioned":"PROVIDE contains virtuals with versions",
@@ -312,7 +311,6 @@ qawarnings=[
 "ebuild.notadded",
 "ebuild.nostable",
 "ebuild.allmasked",
-"ebuild.autotools",
 "ebuild.nesteddie",
 "desktop.invalid",
 "digest.assumed",
@@ -544,13 +542,10 @@ if not kwlist:
 	logging.fatal("Couldn't read KEYWORDS from arch.list")
 	sys.exit(1)
 
-manifest1_compat = not os.path.exists(
-	os.path.join(portdir, "manifest1_obsolete"))
+manifest1_compat = False
 if portdir_overlay != portdir:
 	kwlist.update(portage.grabfile(
 		os.path.join(portdir_overlay, "profiles", "arch.list")))
-	manifest1_compat = not os.path.exists(
-		os.path.join(portdir_overlay, "manifest1_obsolete"))
 
 scanlist = utilities.FindPackagesToScan(repoman_settings, startdir, reposplit)
 scanlist.sort()
@@ -1705,52 +1700,6 @@ else:
 	if options.force:
 		commitmessage += ", RepoMan options: --force"
 	commitmessage += ")"
-	if not manifest1_compat:
-		myfiles = myupdates + myremoved + mymanifests
-		filesdirs = set()
-		if repolevel == 3:
-			filesdirs.add(os.path.join(".", "files"))
-		elif repolevel in (1, 2):
-			for x in myfiles:
-				xs = x.split(os.path.sep)
-				if len(xs) < 4-repolevel:
-					continue
-				xs = xs[0:4-repolevel]
-				xs.append("files")
-				filesdirs.add(os.path.join(*xs))
-		else:
-			raise AssertionError("repolevel=%s" % str(repolevel))
-		digest_files = []
-		for x in filesdirs:
-			dir_path = os.path.join(startdir, x)
-			if not os.path.isdir(dir_path):
-				continue
-			for y in os.listdir(dir_path):
-				if y.startswith("digest-"):
-					digest_files.append(os.path.join(x, y))
-		if digest_files:
-			digest_files.sort()
-			if options.pretend:
-				if vcs == "cvs":
-					print "(rm %s)" % " ".join(digest_files)
-					print "(cvs remove %s)" % " ".join(digest_files)
-				elif vcs == "svn":
-					print "(svn remove %s)" % " ".join(digest_files)
-			else:
-				if vcs == "cvs":
-					for x in digest_files:
-						os.unlink(os.path.join(startdir, x))
-					retval = spawn(["cvs", "remove"] + digest_files,
-							env=os.environ)
-				elif vcs == "svn":
-					retval = spawn(["svn", "remove"] + digest_files,
-							env=os.environ)
-				if retval != os.EX_OK:
-					print "!!! Exiting on vcs (shell) error code:",retval
-					sys.exit(retval)
-			myremoved.extend(digest_files)
-			myremoved = list(set(myremoved))
-			myremoved.sort()
 
 	if myupdates or myremoved:
 		myfiles = myupdates + myremoved
