@@ -5390,7 +5390,6 @@ def action_sync(settings, trees, mtimedb, myopts, myaction):
 				"--exclude=/distfiles",   # Exclude distfiles from consideration
 				"--exclude=/local",       # Exclude local     from consideration
 				"--exclude=/packages",    # Exclude packages  from consideration
-				"--filter=H_**/files/digest-*", # Exclude manifest1 digests and delete on the receiving side
 			])
 
 		else:
