@@ -28,7 +28,7 @@ class portdbapi(dbapi):
 	"""this tree will scan a portage directory located at root (passed to init)"""
 	portdbapi_instances = []
 	_non_category_dirs = ["distfiles", "eclass", "licenses",
-		"metadata", "packages", "profiles", "scripts"]
+		"local", "metadata", "packages", "profiles", "scripts"]
 	_non_category_dirs = re.compile(r'^(%s)$' % "|".join(_non_category_dirs))
 	def __init__(self, porttree_root, mysettings=None):
 		portdbapi.portdbapi_instances.append(self)
